feat: 컴파일 에러로 인한 코드 수정